# supermercado-proj

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  superviva.db
backend/alembic/: env.py
backend/alembic/versions/: 1e0b724e2bf8_initial_schema.py  b8c42a220268_seed_admin_user.py  d72df378d3e5_seed_data.py  f9e8d7c6b5a4_seed_roles.py
backend/app/: factory.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  orders.py  products.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py  repository.py
backend/app/schemas/: __init__.py  order.py  product.py  token.py  user.py
backend/tests/: conftest.py  test_auth.py
docs/: der.d2
frontend/: Dockerfile  checkout.html  contato.html  index.html  login.html  nginx.conf  novidades.html  painel.html  produtos.html  sobre.html
frontend/components/: footer.html  header.html
frontend/css/: style.css
frontend/js/: checkout.js  config.js  login.js  main.js  painel.js  produtos.js
